# numpydoc.el

./: .gitignore  numpydoc.el
python/: pyproject.toml
python/src/: main.py
python/tests/: test_main.py
