[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sam Hedin <sam.hedin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
debugpy = "^1.6.3"
numpydoc = "^1.4.0"

[tool.poetry.scripts]
main = "src.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
